<resources>
    <string name="app_name">espacios_um</string>
    //Vista iniciar sesion
    <string name="txtCodigoE">Codigo estudiantil:</string>
    <string name="txtContrasenaE">Contraseña:</string>
    <string name="btnIniciarSesion">Iniciar sesión</string>


    <string-array name="filtrosPC_array">
        <item>Nombre</item>
        <item>Codigo</item>
    </string-array>

    <string-array name="filtros_array">
        <item>Nombre</item>
        <item>Identificacion</item>
    </string-array>

    <string-array name="reportar_array">
        <item>Si</item>
        <item>No</item>
    </string-array>

    <string-array name="tipo_usuario_array">
        <item>Estudiante</item>
        <item>Profesor</item>
        <item>Conserje</item>
    </string-array>

    <string-array name="tipo_espacio_array">
        <item>Salon</item>
        <item>Laboratorio</item>
        <item>Cancha</item>
        <item>Auditorio</item>
    </string-array>

    <string-array name="tipo_usuarios_array">
        <item>Conserjes</item>
        <item>Estudiantes</item>
        <item>Profesores</item>

    </string-array>


    <string name="btnLogin">Login</string>
    <string name="btnRegistro">Registro</string>
    //Vista Usuario
    <string name="txtBienvenido">Bienvenido</string>
    <string name="btnCerrarSesion">Cerrar sesión</string>
    <string name="btnListarReserva">Reservas</string>
    <string name="btnSalones">Salones</string>
    <string name="btnCanchas">Canchas</string>
    <string name="btnAuditorios">Auditorios</string>
    <string name="btnLaboratorios">Laboratorios</string>

</resources>